syntax = "proto3";

package file_service;
option go_package = "./proto";

import "google/protobuf/timestamp.proto";

service FileService {
  rpc UploadFile(stream FileUploadRequest) returns (FileUploadResponse) {}
  rpc DownloadFile(FileDownloadRequest) returns (stream FileDownloadResponse) {}
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse) {}
}

message FileUploadRequest {
  oneof data {
    FileInfo info = 1;
    bytes chunk = 2;
  }
}

message FileInfo {
  string filename = 1;
}

message FileUploadResponse {
  string message = 1;
  bool success = 2;
}

message FileDownloadRequest {
  string filename = 1;
}

message FileDownloadResponse {
  bytes chunk = 1;
}

message ListFilesRequest {}

message ListFilesResponse {
  repeated FileMetadata files = 1;
}

message FileMetadata {
  string filename = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
} 